# wasm_websocket_from_js_test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
platform/cpp/: CMakeLists.txt  build_cpp_example.sh  libwebsockets_test.cpp  main.cpp  notification_center_sdk_test.cpp  thread_pool_test.cpp  timer_test.cpp
platform/java/: .gitignore  CMakeLists.txt  build.gradle  build.sh  settings.gradle  todo.txt
platform/java/java_demo/: build.gradle  run_demo.sh
platform/java/java_demo/script/: run_demo.sh
platform/java/java_demo/src/main/java/com/dji/: Main.java
platform/java/java_demo/src/main/java/com/example/: Main.java
platform/java/jni/: business_manager_jni.cpp  sdk_jni.cpp
platform/java/notification-center-demo/: build.gradle
platform/java/notification-center-demo/src/main/java/com/dji/: Main.java
platform/java/notification-center-sdk/: build.gradle
platform/java/notification-center-sdk/src/main/java/com/dji/notificationcentersdk/core/: JniLibraryLoader.java  NotificationCenterClient.java  NotificationCenterSDK.java
platform/java/script/: build_java.sh
platform/java/sdk/: build.gradle
platform/java/sdk/src/main/java/com/dji/notificationcentersdk/: AircraftLocation.java  AircraftLocationCallback.java  BusinessManager.java  ConnectionListener.java  JavaMessageCallbackAircraftLocation.java  JavaResultCallback.java  NotificationCenterErrorCode.java  NotificationFrequency.java  NotificationServerErrorCode.java  ResultCallback.java  SDKManager.java  SWIGTYPE_p_NotifactionFrequency.java  SWIGTYPE_p_int64_t.java  SWIGTYPE_p_std__functionT_void_fAircraftLocationMsg_const_RF_t.java  SWIGTYPE_p_std__functionT_void_fNotificationCenterErrorCode_const_RF_t.java  SWIGTYPE_p_std__functionT_void_fstd__string_const_RF_t.java  SWIGTYPE_p_std__weak_ptrT_TopicManager_t.java  SdkInitializeInfo.java  SdkLogLevel.java  notificationcenter.java  notificationcenterJAVA_wrap.c  notificationcenterJAVA_wrap.h  notificationcenterJNI.java
platform/java/sdk/src/main/java/com/dji/notificationcentersdk/core/: NotificationCenterClient.java  NotificationCenterSDK.java
platform/java/sdk/src/main/java/com/dji/notificationcentersdk/core/listeners/: AircraftAttitudeListener.java  AircraftBatteryInfoListener.java  AircraftControlCodeListener.java  AircraftLocationListener.java  AircraftModeCodeListener.java  AircraftSpeedListener.java  AircraftWindSpeedListener.java  DeviceOsdListener.java  DroneInDockListener.java
platform/java/sdk/src/main/java/com/example/notificationcentersdk/: AircraftLocation.java  AircraftLocationCallback.java  AircraftMessageCallback.java  BusinessManager.java  ConnectionListener.java  JavaAircraftLocationMsg.java  JavaAircraftLocationMsgCallback.java  NotificationCenterErrorCode.java  NotificationServerErrorCode.java  ResultCallback.java  SDKManager.java  SWIGTYPE_p_ListenId.java  SWIGTYPE_p_NotifactionFrequency.java  SWIGTYPE_p_OnSubscribeMessageCallback.java  SWIGTYPE_p_OnSubscribeResultCallback.java  SWIGTYPE_p_WebSocketBase.java  SWIGTYPE_p_int64_t.java  SWIGTYPE_p_std__functionT_void_fAircraftLocationMsg_const_RF_t.java  SWIGTYPE_p_std__functionT_void_fNotificationCenterErrorCode_const_RF_t.java  SWIGTYPE_p_std__functionT_void_fstd__string_const_RF_t.java  SWIGTYPE_p_std__weak_ptrT_TopicManager_t.java  SdkInitializeInfo.java  SdkLogLevel.java  notificationcenter.java  notificationcenterJAVA_wrap.c  notificationcenterJAVA_wrap.h  notificationcenterJNI.java
platform/java/src/main/java/com/example/notificationcentersdk/: BusinessManager.java  ConnectionListener.java  SDKManager.java
platform/java/swig/: notificationcenter.i
platform/web/: CMakeLists.txt  build_web.sh  websocket_glue.js
platform/web/script/: build_web.sh
platform/web/src/: JSWebSocket.cpp  JSWebSocket.h  sdk_c_api_web.cpp
platform/web/web_demo/: NotificationCenterSDK.js  NotificationCenterSDK.wasm  index.html  notifycation-sdk.js  server.js  server.py
script/: build.sh  build_cpp.sh  download_emsdk.sh
src/: CMakeLists.txt  CppWebSocket.cpp  CppWebSocket.h  JSWebSocket.cpp  JSWebSocket.h  SDKManager.cpp  SDKManager.h  WebSocketBase.h
src/base/async/: main_thread_executor.cpp  main_thread_executor.h  thread_pool.h  thread_pool_executor.cpp  thread_pool_executor.h  timer.cpp  timer.h
src/base/logger/: custom_formatter.h  logger.h  thread_info.cpp  thread_info.h
src/base/utils/: async_capture_protect.h  cpp_uuid.h  json_utils.h  non_copyable.h
src/business_manager/: BusinessManager.cpp  BusinessManager.h  BusinessManagerDefine.h  topic_message_all_define.h
src/business_manager/topic_message_define/: PublishAircraftAttitudeTopic.h  PublishAircraftBatteryInfoTopic.h  PublishAircraftControlCodeTopic.h  PublishAircraftLocationTopic.h  PublishAircraftModeCodeTopic.h  PublishAircraftPayloadsCameraLiveviewWorldRegionTopic.h  PublishAircraftPayloadsGimbalAttitudeTopic.h  PublishAircraftPayloadsListTopic.h  PublishAircraftSpeedTopic.h  PublishAircraftWindSpeedTopic.h  PublishDeviceOnlineStatusTopic.h  PublishDeviceOsdTopic.h  PublishDockLocationTopic.h  PublishDroneInDockTopic.h  PublishFlightTasksTopic.h
src/business_manager/topic_message_define/parser/: DeviceOsdAircraft.h  DeviceOsdAirportThingPropertiesType1.h  DeviceOsdAirportThingPropertiesType2.h  DeviceOsdDock.h  DeviceOsdType.h
src/c/: sdk_c_api.cpp  sdk_c_api.h
src/message_define/: common.h
src/topic_engine/: TopicManager.cpp  TopicManager.h  TopicMessageWrapper.h  topic_message_all_define.h
src/topic_engine/topic_message_define/: DeviceOsdTopic.h  PublishAircraftLocationTopic.h
src/websocket/: CppWebSocket.cpp  CppWebSocket.h  JSWebSocket.cpp  JSWebSocket.h  WebSocketBase.cpp  WebSocketBase.h  WebSocketHolder.cpp  WebSocketHolder.h  WebsocketEvent.cpp  WebsocketEvent.h
web/: NotificationCenterSDK.js  NotificationCenterSDK.wasm  index.html
